@@ -1,10 +1,11 @@
 jalv (1.4.7) unstable;
 
-  * Exit on jack shutdown (Patch from Robin Gareus)
+  * Exit on Jack shutdown (Patch from Robin Gareus)
+  * Report Jack latency (Patch from Robin Gareus)
   * Fix semaphore correctness issues
   * Use moc-qt4 if present for systems with multiple Qt versions
 
- -- David Robillard <d@drobilla.net>  Thu, 06 Nov 2014 21:49:59 -0500
+ -- David Robillard <d@drobilla.net>  Fri, 13 Feb 2015 20:51:53 -0500
 
 jalv (1.4.6) stable;
 
